--- a/sites/iowapoliticalalert.etypegoogle9.com/local.css
+++ b/sites/iowapoliticalalert.etypegoogle9.com/local.css
@@ -1,5 +1,6 @@
 #main-content .block-inner, #preface .block-inner, h1#page-title {
 	border: 0;
+	padding: 0;
 }
 
 .preface-wrapper .block .content {
@@ -8,4 +9,5 @@
 
 .node-teaser .field-image .field-name-field-image .field-items .field-item:first-child img, .node-teaser .field-name-field-mugshot .field-items .field-item:first-child img {
 	background: none;
+	padding: 0;
 }
