--- a/sites/iowapoliticalalert.etypegoogle9.com/local.css
+++ b/sites/iowapoliticalalert.etypegoogle9.com/local.css
@@ -16,3 +16,8 @@ body {
 	background: none;
 	padding: 0;
 }
+
+h1.title, .preface-wrapper .block-inner .views-field-title h3, .node-teaser h2.title {
+    font-weight: bold;
+    text-decoration: underline;
+}
