--- a/sites/okjailbirds.etypegoogle13.com/local.css
+++ b/sites/okjailbirds.etypegoogle13.com/local.css
@@ -12,20 +12,22 @@ body {
 #main-content #block-views-slideshow-block .block-inner {
     padding: 0 0 20px 0; }
 
+.slideshow-wrapper {
+    padding-top: 1em; }
+
 .flexslider {
     margin: 0 0 2em 0;
     font: 0.8em/1.4 "Roboto", sans-serif; }
 
 .node .field-name-field-image img, .flexslider .slides img {
     height: 59vh;
-    width: auto;
-}
+    width: auto; }
 
 .view-slideshow .views-field-title {
     margin-top: 0.5em;
     display: flex;
-    justify-content: center;
-}
+    justify-content: center; }
+
 .view-slideshow .views-field-title h3 {
     text-transform: capitalize;
     font-size: 1.4em; }
