--- a/sites/okjailbirds.etypegoogle13.com/local.css
+++ b/sites/okjailbirds.etypegoogle13.com/local.css
@@ -21,7 +21,8 @@ body {
 
 .node .field-name-field-image img, .flexslider .slides img {
     height: 59vh;
-    width: auto; }
+    width: auto;
+    box-shadow: 5px 5px #f3f1f1; }
 
 .view-slideshow .views-field-title {
     margin-top: 0.5em;
