--- a/sites/okjailbirds.etypegoogle13.com/local.css
+++ b/sites/okjailbirds.etypegoogle13.com/local.css
@@ -32,3 +32,6 @@ body {
 .view-slideshow .views-field-title h3 {
     text-transform: capitalize;
     font-size: 1.4em; }
+
+.view-slideshow .views-field-image {
+    margin-bottom: 1em; }
