--- a/sites/okjailbirds.etypegoogle13.com/local.css
+++ b/sites/okjailbirds.etypegoogle13.com/local.css
@@ -33,5 +33,5 @@ body {
     text-transform: capitalize;
     font-size: 1.4em; }
 
-.view-slideshow .views-field-image {
+.view-slideshow .views-field-field-image {
     margin-bottom: 1em; }
