--- a/sites/okjailbirds.etypegoogle13.com/local.css
+++ b/sites/okjailbirds.etypegoogle13.com/local.css
@@ -6,9 +6,9 @@ body {
     background: #F15D22;
 }
 
-#menu-7472-1.active-trail {
-    background: #000000;
-    color: #ffffff;
+#menu-7472-1 a.active {
+    background: #000000 !important;
+    color: #ffffff !important;
 }
 
 /* SLIDESHOW
