--- a/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.scss
+++ b/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.scss
@@ -45,7 +45,7 @@ body, #main-menu ul.menu, #user-menu {
     views-field-field-image {
       img {
         float: none;
-        margin: 0;
+        margin: auto;
       }
     }
   }
