--- a/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.scss
+++ b/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.scss
@@ -46,6 +46,7 @@ body, #main-menu ul.menu, #user-menu {
       img {
         float: none;
         margin: auto;
+        height: auto;
       }
     }
   }
