--- a/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
+++ b/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
@@ -31,7 +31,8 @@ body, #main-menu ul.menu, #user-menu {
   padding: 0; }
   .preface-wrapper .views-row .views-field-field-image img {
     float: none;
-    margin: auto; }
+    margin: auto;
+    height: auto; }
 
 /* SLIDESHOW
 --------------------------------------------------------------------------*/
