--- a/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
+++ b/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
@@ -47,7 +47,7 @@ body, #main-menu ul.menu, #user-menu {
   margin: 0 0 2em 0;
   font: 0.8em/1.4 "Roboto", sans-serif; }
 
-.node .field-name-field-image img, .flexslider .slides img {
+.flexslider .slides img {
   height: 59vh;
   width: auto;
   box-shadow: 5px 5px #f3f1f1; }
@@ -61,5 +61,9 @@ body, #main-menu ul.menu, #user-menu {
   font-size: 1.4em; }
 .view-slideshow .views-field-field-image {
   margin: 1em auto; }
+
+/* taxonomy pages */
+.view-taxonomy-term .views-view-grid {
+  width: 100%; }
 
 /*# sourceMappingURL=okjailbirds.css.map */
