--- a/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
+++ b/sites/okjailbirds.etypegoogle13.com/themes/okjailbirds/okjailbirds.css
@@ -66,4 +66,8 @@ body, #main-menu ul.menu, #user-menu {
 .view-taxonomy-term .views-view-grid {
   width: 100%; }
 
+@media only screen and (max-width: 420px) {
+  .views-fluid-grid-list .views-fluid-grid-item .views-field-title h3 {
+    font-size: 7px; } }
+
 /*# sourceMappingURL=okjailbirds.css.map */
